--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
 		</div>
 	</div>
 
-<!-- <script src="./js/render.js"></script> -->
-<!-- <script src="./js/calcCartPrice.js"></script> -->
-<!-- <script src="./js/toggleCartStatus.js"></script>	 -->
-<script src="./js/main.js"></script>
-<!-- <script src="./js/counter.js"></script> -->
-<!-- <script src="./js/cart.js"></script> -->
-
+<script src="./js/modules/render.js"></script>
+<script src="./js/modules/calcCartPrice.js"></script>
+<script src="./js/modules/toggleCartStatus.js"></script>
+<script src="./js/modules/counter.js"></script>
+<script src="./js/modules/cart.js"></script>
+	
+<!-- <script src="./js/main.js"></script> -->
 </body>
 
 </html>
