--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="container text-center">
 			<img src="img/logo/logo.png" width="92" alt="Суши и пицца">
 			<div class="display-4">Доставка їжі</div>
-			<p class="lead">Оперативно и смачно</p>
+			<p class="lead">Оперативно та смачно</p>
 			<p>Безкоштовна доставка на замовлення від 300 UAH.</p>
 		</div>
 	</header>
